variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: type int
var nbPas:int = 0
          ^Variables:2: error: not found: type int
var dejaFait:int = 0
             ^Variables:8: error: not found: value prendreBiscuit
  prendreBiscuit()
  ^Variables:11: error: not found: value While
While (dejaFait != nbPas){
^