variables.Variables.scala.code
var nbPas:int = 0
var dejaFait:int = 0
while (!estSurBiscuit()){
  avance()
	nbPas = nbPas + 1;
}
if (estSurBiscuit()){
  prendreBiscuit()
}

While (dejaFait != nbPas){
  recule()
  dejaFait = dejaFait + 1
}